# CurtisStack

./: .env  .gitignore  City_OG.py  README.md  alembic.ini  requirements.txt
Clustering - Unsupervised/: main.py
Dendrogram-Hierarchical-Model/: README.md
Linked List/: ToDoLinkedList.py  driver.py  node.py  report.md  task.py
ML w: C/: .gitignore  README.md
ML w: C/data/: Housing.csv
ML w: C/src/: main.cpp
ODEWealthModel/: README.md
ODEWealthModel/db/: schema.sql
ODEWealthModel/simulation/: run_wealth_model.py
Rental Radar - Southern Maine/: .env.example  db.py  discover.py  main.py  models.py  rentals.db  scheduler.py  schema.sql  scraper.py  sources.py
Rental Radar - Southern Maine/static/: styles.css
Rental Radar - Southern Maine/templates/: base.html  index.html  price_drops.html
Southern-Maine-Housing-Recommendation-System/: README.md  ds_5020_final_project-1.py
WiringAssistant/: README_RUN.md
airbnb-sql-pipeline/: .gitignore  README.md
app/: database.py  deps.py  models.py
app/collectors/: canonical.py  (+2 more)
rag_csv_qa/: README.md  data.csv  rag_csv_qa.py
scripts/: ingest_federal_register.py  test_ai_impact.py
tensor-project/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tensor-project/.github/workflows/: python-tests.yml
tensor-project/docs/: overview.md
tensor-project/examples/: demo.py
tensor-project/src/tensor_project/: __init__.py  decompositions.py  fourier.py  pca.py  tensors.py  utils.py  visualization.py
tensor-project/tests/: test_decompositions.py  test_fourier.py  test_pca.py  test_tensors.py
(+69 files in other folders)
