[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-project"
version = "0.1.0"
description = "Tensor operations, decompositions, PCA, and Fourier analysis in Python."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Jacob Curtis"}
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "scikit-learn>=1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jupyter>=1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
